--- a/index.html
+++ b/index.html
@@ -3,52 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PointaFam - Home</title>
+    <title>PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <style>
-        .header img {
-            height: 80px;
-        }
-        .nav-buttons {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .nav-buttons button {
-            margin: 0 10px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .nav-buttons button:hover {
-            background-color: #45a049;
-        }
-        .card {
-            border: 1px solid #ddd;
-            border-radius: 8px;
-            padding: 16px;
-            margin: 16px;
-            text-align: center;
-            cursor: pointer;
+        .zoom-out {
             transition: transform 0.2s;
         }
-        .card:hover {
+        .zoom-out:hover {
             transform: scale(1.05);
         }
-        .card img {
-            width: 100%;
-            height: 200px;
-            object-fit: cover;
-            border-radius: 8px;
-        }
-        .card-title {
-            font-size: 1.5rem;
-            margin-top: 10px;
+        .category-button {
+            width: 200px;
+            height: 250px;
+            margin: 0 10px;
         }
     </style>
+    <script>
+        async function loadProductsByCategory(category) {
+            const response = await fetch(`/api/products?category=${category}`);
+            const products = await response.json();
+            const productsList = document.getElementById('products-list');
+            productsList.innerHTML = products.map(product => `
+                <div class="bg-white p-4 rounded-lg shadow-md zoom-out">
+                    <img src="${product.imageURL}" alt="${product.name}" class="w-full h-48 object-cover rounded-t-lg">
+                    <h3 class="text-xl font-bold mb-2">${product.name}</h3>
+                    <p class="text-gray-600">${product.description}</p>
+                    <p class="text-gray-600">$${product.price}</p>
+                    <p class="text-gray-600">${product.quantity} in stock</p>
+                </div>
+            `).join('');
+        }
+
+        document.addEventListener('DOMContentLoaded', () => {
+            const categoryButtons = document.querySelectorAll('.category-button');
+            categoryButtons.forEach(button => {
+                button.addEventListener('click', () => {
+                    const category = button.getAttribute('data-category');
+                    loadProductsByCategory(category);
+                });
+            });
+        });
+    </script>
 </head>
 <body class="bg-gray-100">
     <div class="header flex justify-between items-center p-4 bg-white shadow-md">
@@ -65,24 +60,26 @@
     <div class="container mx-auto mt-10 text-center">
         <h1 class="text-4xl font-bold mb-6">Welcome to PointaFam</h1>
         <p class="text-lg mb-6">Connecting farmers with consumers for fresh and organic produce.</p>
-        <button onclick="window.location.href='/auth'" class="bg-blue-500 text-white p-3 rounded-lg hover:bg-blue-600 transition duration-200">Get Started</button>
-    </div>
 
-    <div class="container mx-auto mt-10">
-        <h2 class="text-3xl font-bold text-center mb-10">Available Products</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
-            <!-- Fruits Card -->
-            <div class="card" onclick="window.location.href='/products?category=fruits'">
-                <img src="public/assets/oranges-4566275_1280.jpg" alt="Fruits">
-                <div class="card-title">Fruits</div>
-                <p>Explore a variety of fresh fruits offered by our farmers.</p>
+        <!-- Product Categories Section -->
+        <div class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Available Products</h2>
+            <div class="flex justify-center space-x-4">
+                <div class="bg-green-500 text-white p-4 rounded hover:bg-green-600 transition duration-200 category-button zoom-out" data-category="fruits">
+                    <h3 class="text-xl font-bold">Fruits</h3>
+                    <img src="public/assets/oranges-4566275_1280.jpg" alt="Fruits" class="w-full h-40 object-cover rounded-t-lg">
+                </div>
+                <div class="bg-green-500 text-white p-4 rounded hover:bg-green-600 transition duration-200 category-button zoom-out" data-category="vegetables">
+                    <h3 class="text-xl font-bold">Vegetables</h3>
+                    <img src="public/assets/vegetable-4218339_1280.jpg" alt="Vegetables" class="w-full h-40 object-cover rounded-t-lg">
+                </div>
+                <!-- Add more categories as needed -->
             </div>
-            <!-- Vegetables Card -->
-            <div class="card" onclick="window.location.href='/products?category=vegetables'">
-                <img src="public/assets/vegetable-4218339_1280.jpg" alt="Vegetables">
-                <div class="card-title">Vegetables</div>
-                <p>Discover a range of fresh vegetables available for you.</p>
-            </div>
+        </div>
+
+        <!-- Products List Section -->
+        <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+            <!-- Products will be loaded here dynamically -->
         </div>
     </div>
 </body>
