--- a/public/static/login.html
+++ b/public/static/login.html
@@ -7,38 +7,41 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
         async function handleLogin(event) {
-            event.preventDefault();
-            const form = event.target;
-            const formData = new FormData(form);
-            const data = Object.fromEntries(formData.entries());
+    event.preventDefault();
+    const form = event.target;
+    const formData = new FormData(form);
 
-            const response = await fetch('/api/login', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify(data)
-            });
+    const response = await fetch('/api/login', {
+        method: 'POST',
+        body: formData
+    });
 
-            const result = await response.json();
-            if (response.ok) {
-                localStorage.setItem('token', result.token);
-                localStorage.setItem('userID', result.userID);
-                if (result.role === 'farmer') {
-                    window.location.href = '/farmer/dashboard';
-                } else if (result.role === 'retailer') {
-                    window.location.href = '/retailer/dashboard';
-                }
-            } else {
-                document.getElementById('login-result').innerText = result.message;
-            }
-        }
+    if (response.ok) {
+        const data = await response.json();
+        localStorage.setItem('userID', data.userID);
+        localStorage.setItem('token', data.token);
+        localStorage.setItem('role', data.role); // Store the user's role
+        redirectToDashboard(data.role);
+    } else {
+        const error = await response.json();
+        alert(`Error: ${error.error}`);
+    }
+}
+
+function redirectToDashboard(role) {
+    const role = localStorage.getItem('role');
+    if (role === 'farmer') {
+        window.location.href = '/farmer/dashboard';
+    } else if (role === 'retailer') {
+        window.location.href = '/retailer/dashboard';
+    }
+}
     </script>
 </head>
 <body class="bg-gray-100 p-4">
     <div class="header">
         <a href="/">
-            <img src="/public/assets/PointaFam.png" alt="PointaFam Logo">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
         </a>
         <span>PointaFam</span>
     </div>
