--- a/public/static/login.html
+++ b/public/static/login.html
@@ -7,35 +7,40 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
         async function handleLogin(event) {
-    event.preventDefault();
-    const form = event.target;
-    const formData = new FormData(form);
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
 
-    const response = await fetch('/api/login', {
-        method: 'POST',
-        body: formData
-    });
+            const response = await fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    email: formData.get('email'),
+                    password: formData.get('password')
+                })
+            });
 
-    if (response.ok) {
-        const data = await response.json();
-        localStorage.setItem('userID', data.userID);
-        localStorage.setItem('token', data.token);
-        localStorage.setItem('role', data.role); // Store the user's role
-        redirectToDashboard(data.role);
-    } else {
-        const error = await response.json();
-        alert(`Error: ${error.error}`);
-    }
-}
+            if (response.ok) {
+                const data = await response.json();
+                localStorage.setItem('userID', data.userID);
+                localStorage.setItem('token', data.token);
+                localStorage.setItem('role', data.role); // Store the user's role
+                redirectToDashboard(data.role);
+            } else {
+                const error = await response.json();
+                document.getElementById('login-result').innerText = `Error: ${error.error}`;
+            }
+        }
 
-function redirectToDashboard(role) {
-    const role = localStorage.getItem('role');
-    if (role === 'farmer') {
-        window.location.href = '/farmer/dashboard';
-    } else if (role === 'retailer') {
-        window.location.href = '/retailer/dashboard';
-    }
-}
+        function redirectToDashboard(role) {
+            if (role === 'farmer') {
+                window.location.href = '/farmer/dashboard';
+            } else if (role === 'retailer') {
+                window.location.href = '/retailer/dashboard';
+            }
+        }
     </script>
 </head>
 <body class="bg-gray-100 p-4">
