--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PointaFam</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        /* Animation for typing effect */
+        .typing-effect {
+            overflow: hidden; /* Ensures the text doesn't overflow */
+            white-space: nowrap; /* Prevents text wrapping */
+            border-right: 3px solid; /* Creates a cursor effect */
+            animation: blink-caret 0.75s step-end infinite;
+        }
+
+        @keyframes blink-caret {
+            from, to { border-color: transparent; }
+            50% { border-color: black; }
+        }
+    </style>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const userID = localStorage.getItem('userID');
@@ -16,6 +30,40 @@
                     <button onclick="logout()" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition duration-200 ml-2">Logout</button>
                 `;
             }
+
+            // Typing and deleting effect
+            const messages = ["Welcome to PointaFam", "Connecting farmers with consumers"];
+            let currentMessageIndex = 0;
+            let currentCharIndex = 0;
+            let isDeleting = false;
+            let typingSpeed = 150; // Typing speed in milliseconds
+            let deletingSpeed = 100; // Deleting speed in milliseconds
+            let typingElement = document.getElementById('welcome-message');
+
+            function type() {
+                if (currentCharIndex < messages[currentMessageIndex].length) {
+                    typingElement.textContent += messages[currentMessageIndex].charAt(currentCharIndex);
+                    currentCharIndex++;
+                    setTimeout(type, typingSpeed);
+                } else {
+                    isDeleting = true;
+                    setTimeout(deleteText, 1000); // Wait before starting to delete
+                }
+            }
+
+            function deleteText() {
+                if (currentCharIndex > 0) {
+                    typingElement.textContent = messages[currentMessageIndex].substring(0, currentCharIndex - 1);
+                    currentCharIndex--;
+                    setTimeout(deleteText, deletingSpeed);
+                } else {
+                    isDeleting = false;
+                    currentMessageIndex = (currentMessageIndex + 1) % messages.length; // Move to the next message
+                    setTimeout(type, 500); // Wait before starting to type the next message
+                }
+            }
+
+            type(); // Start typing effect
         });
 
         function redirectToDashboard() {
@@ -35,42 +83,82 @@
         }
     </script>
 </head>
-<body class="bg-gray-100">
-    <div class="header flex justify-between items-center p-4 bg-white shadow-md">
-        <a href="/">
-            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
-        </a>
-        <div id="user-account" class="nav-buttons">
-            <button onclick="window.location.href='/about'">About Us</button>
-            <button onclick="window.location.href='/contact'">Contact Us</button>
-            <button onclick="window.location.href='/login'">Login</button>
+<body class="bg-gray-100 flex flex-col min-h-screen">
+    <header class="bg-green-600 text-white p-4 shadow-md">
+        <div class="container mx-auto flex justify-between items-center">
+            <a href="/">
+                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="h-12">
+            </a>
+            <nav id="user-account" class="space-x-4">
+                <button onclick="window.location.href='/about'" class="hover:underline">About Us</button>
+                <button onclick="window.location.href='/contact'" class="hover:underline">Contact Us</button>
+                <button onclick="window.location.href='/login'" class="hover:underline">Login</button>
+            </nav>
         </div>
-    </div>
+    </header>
 
-    <div class="container mx-auto mt-10 text-center">
-        <h1 class="text-4xl font-bold mb-6">Welcome to PointaFam</h1>
-        <p class="text-lg mb-6">Connecting farmers with consumers for fresh and organic produce.</p>
+    <main class="container mx-auto flex-grow flex flex-col items-center justify-center text-center">
+        <section class="mb-10">
+            <h1 id="welcome-message" class="text-6xl font-bold mb-4 typing-effect"></h1>
+            <p class="text-lg mb-6">Connecting farmers with consumers for fresh and organic produce.</p>
+        </section>
 
-        <!-- Product Categories Section -->
-        <div class="mb-6">
-            <h2 class="text-2xl font-bold mb-4">Available Products</h2>
-            <div class="flex justify-center space-x-4">
-                <div class="bg-green-500 text-white p-4 rounded hover:bg-green-600 transition duration-200 category-button zoom-out" data-category="fruits">
-                    <h3 class="text-xl font-bold">Fruits</h3>
-                    <img src="public/assets/oranges-4566275_1280.jpg" alt="Fruits" class="w-full h-40 object-cover rounded-t-lg">
+        <!-- Featured Products Section -->
+        <section class="mb-10 w-full">
+            <h2 class="text-3xl font-bold mb-4">Featured Products</h2>
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-12">
+                <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition duration-200">
+                    <img src="/public/assets/oranges.jpg" alt="Fruits" class="w-full h-60 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-xl font-semibold">Fresh Fruits</h3>
+                        <p>Explore our selection of seasonal fruits.</p>
+                        <button onclick="window.location.href='/products/fruits'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                    </div>
                 </div>
-                <div class="bg-green-500 text-white p-4 rounded hover:bg-green-600 transition duration-200 category-button zoom-out" data-category="vegetables">
-                    <h3 class="text-xl font-bold">Vegetables</h3>
-                    <img src="public/assets/vegetable-4218339_1280.jpg" alt="Vegetables" class="w-full h-40 object-cover rounded-t-lg">
+
+                <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition duration-200">
+                    <img src="/public/assets/vegetable.jpg" alt="Vegetables" class="w-full h-60 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-center font-bold">Organic Vegetables</h3>
+                        <p>Discover our fresh organic vegetables.</p>
+                        <button onclick="window.location.href='/products/vegetables'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                    </div>
                 </div>
-                <!-- Add more categories as needed -->
+                <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition duration-200">
+                    <img src="/public/assets/milk.jpg" alt="Vegetables" class="w-full h-60 object-cover">
+                    <div class="p-4">
+                        <h3 class="text-center font-bold">Dairy Products</h3>
+                        <p>Discover our fresh dairy products.</p>
+                        <button onclick="window.location.href='/products/vegetables'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                    </div>
+                </div>
+
+                <!-- Add more product categories as needed -->
             </div>
-        </div>
+        </section>
 
-        <!-- Products List Section -->
-        <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-            <!-- Products will be loaded here dynamically -->
+        <!-- About Section -->
+        <section class="bg-green-100 p-6 rounded-lg mb-10 w-full">
+            <h2 class="text-3xl font-bold mb-4">About Us</h2>
+            <p>At PointaFam, we believe in sustainable agriculture and connecting local farmers directly to consumers. Our mission is to promote fresh, organic produce while supporting local communities.</p>
+            <button onclick="window.location.href='/about'" class="mt-4 bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Learn More</button>
+        </section>
+    </main>
+
+    <!-- Call to Action Section -->
+    <section class="mb-10 justify-center text-center">
+        <h2 class="text-xl font-bold mb-4">Join Our Community!</h2>
+        <p>Sign up for our newsletter to receive updates on new products, special offers, and farming tips.</p>
+        <input type="email" placeholder="Your Email Address" class="mt-4 p-2 border border-gray-300 rounded w-full max-w-xs mx-auto" />
+        <button onclick="#" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Subscribe</button>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-green-600 text-white py-4">
+        <div class="container mx-auto text-center">
+            &copy; 2025 PointaFam. All rights reserved.
         </div>
-    </div>
+    </footer>
+
 </body>
 </html>
