feat: add route for product by category

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     <div class="p-4">
                         <h3 class="text-xl font-semibold">Fresh Fruits</h3>
                         <p>Explore our selection of seasonal fruits.</p>
-                        <button onclick="window.location.href='/products/fruits'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                        <button onclick="window.location.href='/products?category=fruits'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
                     </div>
                 </div>
 
@@ -137,7 +137,7 @@
                     <div class="p-4">
                         <h3 class="text-center font-bold">Organic Vegetables</h3>
                         <p>Discover our fresh organic vegetables.</p>
-                        <button onclick="window.location.href='/products/vegetables'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                        <button onclick="window.location.href='/products?category=vegetables'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
                     </div>
                 </div>
                 <div class="bg-white shadow-lg rounded-lg overflow-hidden hover:shadow-xl transition duration-200">
@@ -145,7 +145,7 @@
                     <div class="p-4">
                         <h3 class="text-center font-bold">Dairy Products</h3>
                         <p>Discover our fresh dairy products.</p>
-                        <button onclick="window.location.href='/products/vegetables'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
+                        <button onclick="window.location.href='/products?category=Dairy'" class="mt-2 bg-green-500 text-white p-2 rounded hover:bg-green-600 transition duration-200">Shop Now</button>
                     </div>
                 </div>
 
