--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -24,9 +24,9 @@
             loadCart();
         });
 
-        async function loadProducts() {
+        async function loadProducts(category = '') {
             const token = localStorage.getItem('token');
-            const response = await fetch('/api/products', {
+            const response = await fetch(`/api/products?category=${category}`, {
                 headers: {
                     'Authorization': `Bearer ${token}`
                 }
@@ -154,6 +154,16 @@
         <!-- Available Products Section -->
         <div id="products-section" class="mb-6">
             <h2 class="text-2xl font-bold mb-4">Available Products</h2>
+            <div class="mb-4">
+                <label for="category" class="block text-gray-700">Select Category:</label>
+                <select id="category" class="mt-1 block w-full p-2 border border-gray-300 rounded-md" onchange="loadProducts(this.value)">
+                    <option value="">All</option>
+                    <option value="vegetables">Vegetables</option>
+                    <option value="fruits">Fruits</option>
+                    <option value="dairy">Dairy</option>
+                    <!-- Add more categories as needed -->
+                </select>
+            </div>
             <div id="products-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Products will be loaded here dynamically -->
             </div>
