--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Retailer Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        .bg-agriculture {
+            background-image: url('/public/assets/agriculture-bg.jpg');
+            background-size: cover;
+            background-position: center;
+        }
+    </style>
     <script>
         document.addEventListener('DOMContentLoaded', async () => {
             const userID = localStorage.getItem('userID');
@@ -63,37 +70,41 @@
             }
             const cartItems = await response.json();
             const cartList = document.getElementById('cart-list');
-            cartList.innerHTML = cartItems.map(item => `
-                <div class="bg-white p-4 rounded-lg shadow-md">
-                    <h3 class="text-xl font-bold mb-2">${item.product.name}</h3>
-                    <p class="text-gray-600">${item.product.description}</p>
-                    <p class="text-gray-600">$${item.product.price}</p>
-                    <p class="text-gray-600">${item.quantity} in cart</p>
-                    <button onclick="removeFromCart(${item.id})" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition duration-200">Remove</button>
-                </div>
-            `).join('');
+            if (cartItems.length === 0) {
+                cartList.innerHTML = '<p class="text-center text-gray-600">Cart empty</p>';
+            } else {
+                cartList.innerHTML = cartItems.map(item => `
+                    <div class="bg-white p-4 rounded-lg shadow-md">
+                        <h3 class="text-xl font-bold mb-2">${item.product.name}</h3>
+                        <p class="text-gray-600">${item.product.description}</p>
+                        <p class="text-gray-600">$${item.product.price}</p>
+                        <p class="text-gray-600">${item.quantity} in cart</p>
+                        <button onclick="removeFromCart(${item.id})" class="bg-red-500 text-white p-2 rounded hover:bg-red-600 transition duration-200">Remove</button>
+                    </div>
+                `).join('');
+            }
         }
 
         async function addToCart(productId) {
-        const userID = localStorage.getItem('userID');
-        const token = localStorage.getItem('token');
-        const response = await fetch('/api/cart', {
-            method: 'POST',
-            headers: {
-                'Authorization': `Bearer ${token}`,
-                'Content-Type': 'application/json'
-            },
-            body: JSON.stringify({ productId, userID, quantity: 1 })
-        });
+            const userID = localStorage.getItem('userID');
+            const token = localStorage.getItem('token');
+            const response = await fetch('/api/cart', {
+                method: 'POST',
+                headers: {
+                    'Authorization': `Bearer ${token}`,
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ productId: productId, userID: parseInt(userID), quantity: 1 })
+            });
 
-        if (response.ok) {
-            alert('Product added to cart');
-            loadCart();
-        } else {
-            const error = await response.json();
-            alert(`Error: ${error.error}`);
+            if (response.ok) {
+                alert('Product added to cart');
+                loadCart(); // Reload the cart to show the added product
+            } else {
+                const error = await response.json();
+                alert(`Error: ${error.error}`);
+            }
         }
-    }
 
         async function removeFromCart(cartItemId) {
             const token = localStorage.getItem('token');
@@ -106,17 +117,19 @@
 
             if (response.ok) {
                 alert('Product removed from cart');
-                loadCart();
+                loadCart(); // Reload the cart to show the updated items
             } else {
                 const error = await response.json();
                 alert(`Error: ${error.error}`);
             }
         }
 
-        function showSection(sectionId) {
-            document.getElementById('products-section').classList.add('hidden');
-            document.getElementById('cart-section').classList.add('hidden');
-            document.getElementById(sectionId).classList.remove('hidden');
+        function showCart() {
+            document.getElementById('cart-modal').classList.remove('hidden');
+        }
+
+        function hideCart() {
+            document.getElementById('cart-modal').classList.add('hidden');
         }
 
         function logout() {
@@ -129,27 +142,41 @@
 </head>
 <body class="bg-gray-100 flex">
     <!-- Sidebar -->
-    <div class="w-1/4 bg-white p-6 shadow-md h-screen">
-        <div class="mb-6">
-            <a href="/">
-                <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="w-32 mx-auto">
-            </a>
+    <div class="w-1/5 bg-white p-4 shadow-md h-screen flex flex-col justify-between">
+        <div>
+            <div class="mb-4">
+                <a href="/">
+                    <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo" class="w-24 mx-auto">
+                </a>
+            </div>
+            <div class="mb-4 text-center">
+                <h2 class="text-lg font-bold" id="user-name">Loading...</h2>
+                <p class="text-gray-600" id="user-email">Loading...</p>
+                <p class="text-gray-600" id="user-location">Loading...</p>
+            </div>
+            <ul class="space-y-3">
+                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="showCart()">My Cart</a></li>
+                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="loadProducts()">Available Products</a></li>
+            </ul>
         </div>
-        <div class="mb-6 text-center">
-            <h2 class="text-xl font-bold" id="user-name">Loading...</h2>
-            <p class="text-gray-600" id="user-email">Loading...</p>
-            <p class="text-gray-600" id="user-location">Loading...</p>
+        <div>
+            <h3 class="text-md font-bold mb-2">Manage Profile</h3>
+            <ul class="space-y-3">
+                <li><a href="javascript:void(0);" class="text-blue-500 hover:underline">Edit Profile</a></li>
+                <li><a href="javascript:void(0);" class="text-red-500 hover:underline" onclick="logout()">Logout</a></li>
+            </ul>
         </div>
-        <ul class="space-y-4">
-            <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="showSection('products-section')">Available Products</a></li>
-            <li><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="showSection('cart-section')">My Cart</a></li>
-            <li><a href="javascript:void(0);" class="text-red-500 hover:underline" onclick="logout()">Logout</a></li>
-        </ul>
     </div>
 
     <!-- Main Content -->
-    <div class="w-3/4 p-6">
+    <div class="w-4/5 p-6">
         <h1 class="text-3xl font-bold mb-6 text-center">Retailer Dashboard</h1>
+
+        <!-- Card Section -->
+        <div class="bg-agriculture p-6 rounded-lg shadow-md mb-6">
+            <h2 class="text-2xl font-bold">Welcome to your Dashboard</h2>
+            <p>Manage your products, view your cart, and update your profile.</p>
+        </div>
 
         <!-- Available Products Section -->
         <div id="products-section" class="mb-6">
@@ -168,10 +195,15 @@
                 <!-- Products will be loaded here dynamically -->
             </div>
         </div>
+    </div>
 
-        <!-- My Cart Section -->
-        <div id="cart-section" class="mb-6 hidden">
-            <h2 class="text-2xl font-bold mb-4">My Cart</h2>
+    <!-- Cart Modal -->
+    <div id="cart-modal" class="fixed inset-0 bg-gray-800 bg-opacity-75 flex items-center justify-center hidden">
+        <div class="bg-white p-6 rounded-lg shadow-lg w-3/4 max-w-3xl">
+            <div class="flex justify-between items-center mb-4">
+                <h2 class="text-2xl font-bold">My Cart</h2>
+                <button onclick="hideCart()" class="text-gray-600 hover:text-gray-900">&times;</button>
+            </div>
             <div id="cart-list" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
                 <!-- Cart items will be loaded here dynamically -->
             </div>
